--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "connectionString": {
+    "dbConnection": "Data Source=DESKTOP-SB4HEO9;Initial Catalog=InquiriesDatabase;Trusted_Connection=True;"
+  }
 }
