Database CRUD Operation (Create)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaulConnection": "Data Source=DESKTOP-SB4HEO9;Initial Catalog=InquiriesDatabase;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "connectionString": {
-    "dbConnection": "Data Source=DESKTOP-SB4HEO9;Initial Catalog=InquiriesDatabase;Trusted_Connection=True;"
-  }
+  "AllowedHosts": "*"
 }
